Ignore .env file from version control

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 # Miscellaneous
+.env
+*.env
+firebaseConfig.js
 *.class
 *.log
 *.pyc
@@ -43,3 +46,4 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+.env
